--- a/index.htm
+++ b/index.htm
@@ -6,31 +6,31 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <script src="lib/tdvplayer.js?v=1737415166332"></script>
-    <link rel="shortcut icon" href="favicon.ico?v=1737415166332">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1737415166332">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1737415166332">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1737415166332">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1737415166332">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1737415166332">
-	<link rel="manifest" href="manifest.json?v=1737415166332">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
+    <script src="lib/tdvplayer.js?v=1737415725346"></script>
+    <link rel="shortcut icon" href="favicon.ico?v=1737415725346">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1737415725346">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1737415725346">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1737415725346">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1737415725346">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1737415725346">
+	<link rel="manifest" href="manifest.json?v=1737415725346">
+	<meta name="msapplication-TileColor" content="#000000">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/pt.txt?v=1737415166332" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1737415166332" as="script"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/r/2/0_0.jpg?v=1737415166332" as="image"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/l/2/0_0.jpg?v=1737415166332" as="image"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/u/2/0_0.jpg?v=1737415166332" as="image"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/d/2/0_0.jpg?v=1737415166332" as="image"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/f/2/0_0.jpg?v=1737415166332" as="image"/>
-	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/b/2/0_0.jpg?v=1737415166332" as="image"/>
+	<link rel="preload" href="locale/pt.txt?v=1737415725346" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1737415725346" as="script"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/r/2/0_0.jpg?v=1737415725346" as="image"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/l/2/0_0.jpg?v=1737415725346" as="image"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/u/2/0_0.jpg?v=1737415725346" as="image"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/d/2/0_0.jpg?v=1737415725346" as="image"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/f/2/0_0.jpg?v=1737415725346" as="image"/>
+	<link rel="preload" href="media/panorama_8AEA6A84_8561_D723_41D4_7CC6E6ECE2C5_0/b/2/0_0.jpg?v=1737415725346" as="image"/>
 	<script src="scorm.js" type="text/javascript"></script>
 	<meta name="description" content="Virtual Tour"/>
-	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="script.js?v=1737415166332"></script>
+	<meta name="theme-color" content="#000000"/>
+    <script src="script.js?v=1737415725346"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1737415166332","mobile":"script_mobile.js?v=1737415166332"};
+        var devicesUrl = {"general":"script_general.js?v=1737415725346","mobile":"script_mobile.js?v=1737415725346"};
 
         (function()
         {
@@ -73,9 +73,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1737415166332');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1737415166332');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1737415166332');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1737415725346');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1737415725346');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1737415725346');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -116,7 +116,7 @@
 
         function onVirtualTourLoaded()
         {
-            disposePreloader();
+            console.log("onloaded", tour.isPaused); if(!tour.isPaused) disposePreloader();
         }
 
         function onVirtualTourEnded()
@@ -247,6 +247,8 @@
 
             showPreloader();
 			loadTour();
+			pauseTour();
+			setTimeout(function(){ console.log("timeout", tour.isInitialized); if(tour.isInitialized) { disposePreloader(); } resumeTour(); }, 6000);
         }
 
         
@@ -339,7 +341,7 @@
         .fill-viewport.landscape-left { left: env(safe-area-inset-left); }
 		.fill-viewport.landscape-right { right: env(safe-area-inset-right); }
         #viewer { z-index:1; }
-        #preloadContainer { z-index:2; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
+        #preloadContainer { z-index:2; opacity:0; background-color:rgba(0,0,0,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
     
 </head>
